# howareyou

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: package-dev.yml  package.yml
src/: data.rs  main.rs  routes.rs
