[package]
name = "howareyou"
description = "A tiny web server written in Rust to test, debug, or benchmark easily"
authors = ["Leo Chen <leo881003@gmail.com>"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Leo1003/howareyou"
readme = "README.md"
license = "MIT"

[dependencies]
warp = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
env_logger = "0.9.0"
anyhow = "1.0.43"
dotenv = "0.15.0"
log = "0.4.14"
futures = "0.3.17"
humantime-serde = "1.0.1"
hostname = "0.3.1"
once_cell = "1.8.0"

[dependencies.tokio]
version = "1.11.0"
features = ["sync", "time", "io-util", "rt-multi-thread"]
